--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>只要有截圖 Post Screenshot</title>
+    <title>只要截圖 Post Screenshot</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <main class="container">
-      <h1>只要有截圖 Post Screenshot</h1>
+      <h1>只要截圖 Post Screenshot</h1>
       <p>貼入 Facebook / Instagram / Threads 公開貼文 URL（每行一筆）</p>
 
       <textarea id="urls" rows="10" placeholder="https://www.instagram.com/p/...\nhttps://www.facebook.com/...\nhttps://www.threads.net/...\n"></textarea>
